--- a/style/main.css
+++ b/style/main.css
@@ -9,9 +9,11 @@
   box-sizing: border-box;
 }
 
+/* elementos base*/
 body {
   background: var(--preta);
   font-family: 'Times New Roman', 'Times New Roman', Times, serif;
+  color: white;
 }
 
 header .container {
@@ -36,4 +38,26 @@ header nav a {
 
 header nav a:hover {
   color: #fff;
+}
+
+/* filme principal*/
+.filme-principal {
+  font-size: 16px;
+  background: linear-gradient(rgba(0,0,0,.2), rgba(0,0,0,.6)), url('../img/resgate.jpg');
+
+  height: 400px;
+  background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.filme-principal .descricao {
+  margin-bottom: 40px;
+}
+
+.titulo {
+  font-size: 40px;
 }
